hphp/hack/test/typecheck/assignment_sequencing/switch_case_assn.php.exp
File "switch_case_assn.php", line 6, characters 11-11:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "switch_case_assn.php", line 6, characters 11-12:
Don't assign to variables inside of case labels (Typing[4145])
File "switch_case_assn.php", line 3, characters 10-12:
Was expecting a return type hint (Typing[4030])
